remove magic leap xr plugin, which caused compilation error

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.5.2",
-    "com.unity.feature.ar": "1.0.2",
     "com.unity.feature.mobile": "1.0.0",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -13,6 +12,8 @@
     "com.unity.visualscripting": "1.9.5",
     "com.unity.xr.arcore": "6.0.3",
     "com.unity.xr.arkit": "6.0.3",
+    "com.unity.xr.interaction.toolkit": "3.0.7",
+    "com.unity.xr.openxr": "1.13.2",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
